--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -14,7 +14,7 @@
   </nav>
 
   <div class="container is-fluid" style="margin-top: 32px">
-    <div id="needs" class="columns is-mobile"></div>
+    <div id="needs" class="columns is-mobile" style="flex-wrap: wrap"></div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/2.0.4/mithril.min.js"></script>
