--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -18,7 +18,23 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/2.0.4/mithril.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.4.4/polyfill.min.js"></script>
+  <script src="https://unpkg.com/@adonisjs/websocket-client"></script>
   <script>
+    var ws = adonis.Ws('ws://localhost:3333')
+    ws.connect()
+
+    ws.on('open', () => {
+      console.log('websocket connection successful')
+    })
+
+    var needsNotif = ws.subscribe('needs')
+
+    needsNotif.on('need::new', function(need) {
+      NeedModel.needs.push(need)
+      m.redraw()
+    })
+
     var NeedModel = {
       needs: [],
 
