--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.1/css/bulma.min.css" />
 </head>
 <body>
-  <nav class="navbar is-primary">
+  <nav class="navbar is-primary container is-fluid">
     <div class="navbar-brand">
       <a href="#" class="navbar-item is-size-5">I Need Stuff</a>
     </div>
