--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -1,5 +1,44 @@
 @layout('layout')
 
 @section('content')
+<form method="POST" action="/register">
+  {{ csrfField() }}
+  <div class="field">
+    <label for="" class="label">First Name</label>
+    <div class="control">
+      <input type="text" class="input" name="first_name">
+    </div>
+  </div>
 
+  <div class="field">
+    <label for="" class="label">Last Name</label>
+    <div class="control">
+      <input type="text" class="input" name="last_name">
+    </div>
+  </div>
+
+  <div class="field">
+    <label for="" class="label">Email</label>
+    <div class="control">
+      <input type="email" class="input" name="email">
+    </div>
+  </div>
+
+  <div class="field">
+    <label for="" class="label">Password</label>
+    <div class="control">
+      <input type="password" class="input" name="password">
+    </div>
+  </div>
+
+  <div class="field">
+    <label for="" class="label">Confirm Password</label>
+    <div class="control">
+      <input type="password" class="input" name="password_confirmation">
+    </div>
+  </div>
+
+  <button type="submit" class="button is-primary">Submit</button>
+
+</form>
 @endsection
