--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -54,7 +54,12 @@
                 ])
               ]),
               loggedIn ? m('.card-footer', [
-                m('a.card-footer-item', 'Help this person')
+                m('a.card-footer-item', [
+                  m('i.fas.fa-hands-helping', {
+                    style: 'margin-right: 0.5rem;'
+                  }),
+                  'Help this person'
+                ])
               ]) : null
             ])
           ])
@@ -68,10 +73,12 @@
 @endsection
 
 @section('content')
-<h2>If you need help, or know someone who does, please call <strong>{{ numberToCall }}</strong></h2>
-@loggedIn
-@else
-<h2>If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</h2>
-@endloggedIn
+<div style="margin-bottom: 24px;">
+  <h2>If you need help, or know someone who does, please call <strong>{{ numberToCall }}</strong></h2>
+  @loggedIn
+  @else
+  <h2>If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</h2>
+  @endloggedIn
+</div>
 <div id="needs" class="columns is-mobile" style="flex-wrap: wrap"></div>
 @endsection
