Ability to uncommit to a task

--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -29,6 +29,11 @@
     m.redraw()
   })
 
+  needsNotif.on('need::backinqueue', function(need) {
+    NeedModel.needs.push(need)
+    m.redraw()
+  })
+
   var loggedIn = false
 
   @loggedIn
