--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -1,9 +1,22 @@
 @layout('layout')
 
+@section('styles')
+<link rel="stylesheet" href="https://cdn.plyr.io/3.5.10/plyr.css" />
+<style>
+  .plyr {
+    min-width: 0;
+  }
+  .plyr--audio .plyr__controls {
+    padding: 0;
+  }
+</style>
+@endsection
+
 @section('scripts')
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/2.0.4/mithril.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.4.4/polyfill.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
+<script src="https://cdn.plyr.io/3.5.10/plyr.polyfilled.js"></script>
 <script src="https://unpkg.com/@adonisjs/websocket-client"></script>
 <script>
   var ws = adonis.Ws('ws://d8004b90.ngrok.io')
@@ -68,26 +81,31 @@
 
       view: function() {
         return NeedModel.needs.map(function(need) {
-          return m('.column.is-one-quarter-desktop', [
+          return m('.col.mb-4', [
             m('.card', [
-              m('.card-content', [
-                m('.content', [
-                  m('audio', {
-                    controls: true,
-                    src: need.recording_url
-                  })
-                ])
-              ]),
-              loggedIn ? m('.card-footer', [
-                m('a.card-footer-item', {
+              m('.card-body', [
+                m('audio', {
+                  controls: true,
+                  src: need.recording_url,
+                  oncreate: function(vnode) {
+                    // console.log(vnode.dom)
+                    var player = new Plyr(vnode.dom, {
+                      controls: [
+                        'play',
+                        'progress'
+                      ]
+                    })
+                  }
+                }),
+                loggedIn ? m('a.btn.btn-block.btn-primary.mt-3', {
                   href: '/needs/'+need.id+'/help'
                 }, [
                   m('i.fas.fa-hands-helping', {
                     style: 'margin-right: 0.5rem;'
                   }),
                   'Help this person'
-                ])
-              ]) : null
+                ]) : null
+              ]),
             ])
           ])
         })
@@ -101,11 +119,11 @@
 
 @section('content')
 <div style="margin-bottom: 24px;">
-  <h2>If you need help, or know someone who does, please call <strong>{{ numberToCall }}</strong></h2>
+  <p>If you need help, or know someone who does, please call <strong>{{ numberToCall }}</strong></p>
   @loggedIn
   @else
-  <h2>If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</h2>
+  <p>If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</p>
   @endloggedIn
 </div>
-<div id="needs" class="columns is-mobile" style="flex-wrap: wrap"></div>
+<div id="needs" class="row row-cols-1 row-cols-md-3"></div>
 @endsection
