--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -4,14 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Need Help</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.1/css/bulma.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  @!section('styles')
 </head>
 <body>
-  <nav class="navbar is-primary container is-fluid">
+  <!--  <nav class="navbar is-primary container is-fluid">
     <div class="navbar-brand">
       <a href="/" class="navbar-item is-size-5">I Need Help</a>
+
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
     </div>
-    <div class="navbar-menu">
+    <div class="navbar-menu" id="navMenu">
       <div class="navbar-end">
         <div class="navbar-item @loggedIn has-dropdown is-hoverable @endloggedIn">
           @loggedIn
@@ -32,13 +39,52 @@
         </div>
       </div>
     </div>
+  </nav>  -->
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a href="/" class="navbar-brand h1 mb-0">I Need Help</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navMenu">
+        @loggedIn
+        <div class="navbar-nav">
+          <div class="nav-item dropdown">
+            <a
+              href="#"
+              class="nav-link dropdown-toggle"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+              role="button"
+            >
+              <i class="fas fa-user" style="margin-right: 0.5rem;"></i> Joe
+            </a>
+            <div class="dropdown-menu">
+              <a href="#" class="dropdown-item">Profile</a>
+              <a href="/logout" class="dropdown-item">Log Out</a>
+            </div>
+          </div>
+        </div>
+        @else
+        <div class="mt-2 mt-lg-0">
+          <a href="/register" role="button" class="btn btn-success">Sign Up to Help</a>
+          <a href="/login" role="button" class="btn btn-info">Log In</a>
+        </div>
+        @endloggedIn
+      </div>
+    </div>
   </nav>
 
-  <div class="container is-fluid" style="margin-top: 32px">
+  <div class="container mt-4">
     @!section('content')
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   @!section('scripts')
 </body>
 </html>
