--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -125,5 +125,5 @@
   <p>If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</p>
   @endloggedIn
 </div>
-<div id="needs" class="row row-cols-1 row-cols-md-3"></div>
+<div id="needs" class="row row-cols-1 row-cols-sm-2 row-cols-lg-3"></div>
 @endsection
