--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -3,42 +3,32 @@
 @section('content')
 <form method="POST" action="/register">
   {{ csrfField() }}
-  <div class="field">
+  <div class="form-group">
     <label for="" class="label">First Name</label>
-    <div class="control">
-      <input type="text" class="input" name="first_name">
-    </div>
+    <input type="text" class="form-control" name="first_name">
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <label for="" class="label">Last Name</label>
-    <div class="control">
-      <input type="text" class="input" name="last_name">
-    </div>
+    <input type="text" class="form-control" name="last_name">
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <label for="" class="label">Email</label>
-    <div class="control">
-      <input type="email" class="input" name="email">
-    </div>
+    <input type="email" class="form-control" name="email">
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <label for="" class="label">Password</label>
-    <div class="control">
-      <input type="password" class="input" name="password">
-    </div>
+    <input type="password" class="form-control" name="password">
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <label for="" class="label">Confirm Password</label>
-    <div class="control">
-      <input type="password" class="input" name="password_confirmation">
-    </div>
+    <input type="password" class="form-control" name="password_confirmation">
   </div>
 
-  <button type="submit" class="button is-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Submit</button>
 
 </form>
 @endsection
