--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -1,19 +1,22 @@
 @layout('layout')
 
 @section('content')
-<form method="POST" action="/login">
-  {{ csrfField() }}
-  <div class="form-group">
-    <label for="" class="label">Email</label>
-    <input type="email" class="form-control" name="email">
+<div class="row justify-content-md-center">
+  <div class="col-md-6 col-lg-4">
+    <form method="POST" action="/login">
+      {{ csrfField() }}
+      <div class="form-group">
+        <label for="" class="label">Email</label>
+        <input type="email" class="form-control" name="email">
+      </div>
+
+      <div class="form-group">
+        <label for="" class="label">Password</label>
+        <input type="password" class="form-control" name="password">
+      </div>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </div>
-
-  <div class="form-group">
-    <label for="" class="label">Password</label>
-    <input type="password" class="form-control" name="password">
-  </div>
-
-  <button type="submit" class="btn btn-primary">Submit</button>
-
-</form>
+</div>
 @endsection
