--- a/resources/views/register.edge
+++ b/resources/views/register.edge
@@ -1,34 +1,38 @@
 @layout('layout')
 
 @section('content')
-<form method="POST" action="/register">
-  {{ csrfField() }}
-  <div class="form-group">
-    <label for="" class="label">First Name</label>
-    <input type="text" class="form-control" name="first_name">
+<div class="row justify-content-md-center">
+  <div class="col-md-6 col-lg-4">
+    <form method="POST" action="/register">
+      {{ csrfField() }}
+      <div class="form-group">
+        <label for="" class="label">First Name</label>
+        <input type="text" class="form-control" name="first_name">
+      </div>
+
+      <div class="form-group">
+        <label for="" class="label">Last Name</label>
+        <input type="text" class="form-control" name="last_name">
+      </div>
+
+      <div class="form-group">
+        <label for="" class="label">Email</label>
+        <input type="email" class="form-control" name="email">
+      </div>
+
+      <div class="form-group">
+        <label for="" class="label">Password</label>
+        <input type="password" class="form-control" name="password">
+      </div>
+
+      <div class="form-group">
+        <label for="" class="label">Confirm Password</label>
+        <input type="password" class="form-control" name="password_confirmation">
+      </div>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+
+    </form>
   </div>
-
-  <div class="form-group">
-    <label for="" class="label">Last Name</label>
-    <input type="text" class="form-control" name="last_name">
-  </div>
-
-  <div class="form-group">
-    <label for="" class="label">Email</label>
-    <input type="email" class="form-control" name="email">
-  </div>
-
-  <div class="form-group">
-    <label for="" class="label">Password</label>
-    <input type="password" class="form-control" name="password">
-  </div>
-
-  <div class="form-group">
-    <label for="" class="label">Confirm Password</label>
-    <input type="password" class="form-control" name="password_confirmation">
-  </div>
-
-  <button type="submit" class="btn btn-primary">Submit</button>
-
-</form>
+</div>
 @endsection
