--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -80,38 +80,41 @@
       },
 
       view: function() {
-        return NeedModel.needs.map(function(need) {
-          return m('.col.mb-4', [
-            m('.card', [
-              m('.card-body', [
-                m('audio', {
-                  controls: true,
-                  src: need.recording_url,
-                  oncreate: function(vnode) {
-                    // console.log(vnode.dom)
-                    var player = new Plyr(vnode.dom, {
-                      controls: [
-                        'play',
-                        'progress'
-                      ]
-                    })
-                  }
-                }),
-                loggedIn ? m('a.btn.btn-block.btn-primary.mt-3', {
-                  href: '/needs/'+need.id+'/help'
-                }, [
-                  m('i.fas.fa-hands-helping', {
-                    style: 'margin-right: 0.5rem;'
+        return [
+          NeedModel.needs.length > 0 ? m('.row.row-cols-1.row-cols-sm-2.row-cols-lg-3', NeedModel.needs.map(function(need) {
+            return m('.col.mb-4', [
+              m('.card', [
+                m('.card-body', [
+                  m('audio', {
+                    controls: true,
+                    src: need.recording_url,
+                    oncreate: function(vnode) {
+                      // console.log(vnode.dom)
+                      var player = new Plyr(vnode.dom, {
+                        controls: [
+                          'play',
+                          'progress'
+                        ]
+                      })
+                    }
                   }),
-                  'Help this person'
-                ]) : null
-              ]),
+                  loggedIn ? m('a.btn.btn-block.btn-primary.mt-3', {
+                    href: '/needs/'+need.id+'/help'
+                  }, [
+                    m('i.fas.fa-hands-helping', {
+                      style: 'margin-right: 0.5rem;'
+                    }),
+                    'Help this person'
+                  ]) : null
+                ]),
+              ])
             ])
-          ])
-        })
-      }
+          })) : m('h2', 'No one needs help right now!')
+
+      ]
     }
   }
+}
 
   m.mount(document.getElementById('needs'), App)
 </script>
@@ -125,5 +128,5 @@
   <div class="alert alert-secondary">If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</div>
   @endloggedIn
 </div>
-<div id="needs" class="row row-cols-1 row-cols-sm-2 row-cols-lg-3"></div>
+<div id="needs"></div>
 @endsection
