Make current task front-and-center on homepage

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -21,6 +21,10 @@
           <li class="nav-item">
             <a href="/needs/current" class="nav-link">My Current Task</a>
           </li>
+          @else
+          <li class="nav-item">
+            <a href="/" class="nav-link">Help Someone</a>
+          </li>
           @endif
           <li class="nav-item">
             <a href="/my-stats" class="nav-link">My Stats</a>
