--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -128,5 +128,14 @@
   <div class="alert alert-secondary">If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</div>
   @endloggedIn
 </div>
+@if(authUserNeedInProgress)
+<h2>Your current task</h2>
+<p>Please either complete the current task, or put it back in the pool for someone else to grab before you help someone else.</p>
+<div>
+  <audio controls src="{{ authUserNeedInProgress.recording_url }}"></audio>
+</div>
+<a href="/needs/current" class="btn btn-lg btn-primary">See task details</a>
+@else
 <div id="needs"></div>
+@endif
 @endsection
