--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -8,7 +8,7 @@
   @!section('styles')
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a href="/" class="navbar-brand h1 mb-0">I Need Help</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
