Fix duplicate twilio proxy sessions, nicer phone formatting

--- a/resources/views/need.edge
+++ b/resources/views/need.edge
@@ -22,7 +22,7 @@
       If you need more information, reach out to the person by calling this number.
     </p>
     <p>
-      <strong>{{ need.need_phone_proxy }}</strong>
+      <strong>{{ need.need_phone_proxy_human_friendly }}</strong>
     </p>
 
     <div class="alert alert-warning"><strong>Please Note:</strong> This number is anonymous and only valid while this task is active. If you want to maintain contact with the person you're helping, you can do it with their consent outside of this app.</div>
