User profile update, pretty rough

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -43,8 +43,8 @@
               <i class="fas fa-user mr-3"></i> Joe
             </a>
             <div class="dropdown-menu">
-              <a href="#" class="dropdown-item">Profile</a>
-              <a href="/logout" class="dropdown-item">Log Out</a>
+              <a href="/profile" class="dropdown-item"><i class="fas fa-cog mr-3"></i>Profile</a>
+              <a href="/logout" class="dropdown-item"><i class="fas fa-sign-out-alt mr-3"></i>Log Out</a>
             </div>
           </li>
         </ul>
