--- a/resources/views/login.edge
+++ b/resources/views/login.edge
@@ -3,11 +3,16 @@
 @section('content')
 <div class="row justify-content-md-center">
   <div class="col-md-6 col-lg-4">
+    @if(flashMessage('error'))
+    <div class="alert alert-danger">
+      {{ flashMessage('error') }}
+    </div>
+    @endif
     <form method="POST" action="/login">
       {{ csrfField() }}
       <div class="form-group">
         <label for="" class="label">Email</label>
-        <input type="email" class="form-control" name="email">
+        <input type="email" class="form-control" name="email" value="{{ old('email', '') }}">
       </div>
 
       <div class="form-group">
