--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -123,10 +123,10 @@
 
 @section('content')
 <div style="margin-bottom: 24px;">
-<div class="alert alert-primary">If you need help, or know someone who does, please call or have them call <a href="tel:{{ numberToCallActual }}"><strong>{{ numberToCallDisplay }}</strong></a></div class="alert alert-primary">
+<p>If you need help, or know someone who does, please call or have them call <a href="tel:{{ numberToCallActual }}"><strong>{{ numberToCallDisplay }}</strong></a></p>
   @loggedIn
   @else
-  <div class="alert alert-secondary">If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</div>
+  <p>If you'd like to help these people, please <a href="/register">sign up</a> or <a href="/login">log in</a> if you have an account already.</p>
   @endloggedIn
 </div>
 @if(authUserNeedInProgress)
