Whoops, use the actual user's name instead of my own

--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -40,7 +40,7 @@
               aria-expanded="false"
               role="button"
             >
-              <i class="fas fa-user mr-3"></i> Joe
+              <i class="fas fa-user mr-3"></i> {{ auth.user.first_name }}
             </a>
             <div class="dropdown-menu">
               <a href="/profile" class="dropdown-item"><i class="fas fa-cog mr-3"></i>Profile</a>
