--- a/resources/views/layout.edge
+++ b/resources/views/layout.edge
@@ -67,6 +67,14 @@
         </button>
       </div>
     @endif
+    @if(flashMessage('error'))
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{ flashMessage('error') }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    @endif
     @!section('content')
   </div>
 
